--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://abhishek-mahato0.github.io/react-todolist",
+  "homepage": "https://abhishek-mahato0.github.io/react-todoapp",
   "name": "todolocal",
   "version": "0.1.0",
   "private": true,
